# ECE-408-Fall-2024

./: README.md  README.release.md
Project/: .gitignore  ECE408_FA24_m3_report.docx  README.md  README_m1.md  README_m2.md  README_m3.md  m1_cpu.slurm  m1_gpu.slurm  m2.slurm  m3.slurm  run.sh
Project/project/: CMakeLists.txt  optime_script.sql
Project/project/m3/op_0/: m3-forward.cu
Project/project/m3/op_1/: m3-forward.cu
Project/project/m3/op_2/: m3-forward.cu
Project/project/m3/op_5/: m3-forward.cu
Project/project/m3/req_1/: m3-forward.cu
Project/project/m3/req_2/: m3-forward.cu
Project/project/src/: CMakeLists.txt
Project/project/src/layer/custom/: cpu-new-forward.cc  m3-competition.cu  m3-forward.cu  matmul-unroll.cu  new-forward.cu
lab0/: README.md  job.slurm
lab1/: README.md  job.slurm  lab1.cu
lab2/: lab2.cu
lab3/: README.md  lab3.cu
lab4/: README.md  lab4.cu
lab5/: README.md  lab5.cu
lab6/: README.md  lab6.cu
lab7/: lab7.cu
lab8/: README.md  lab8.cu
